--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 	"scripts": {
 		"prettier": "prettier --no-error-on-unmatched-pattern --write \"./**/*.cjs\" \"./**/*.css\" \"./**/*.html\" \"./**/*.js\" \"./**/*.json\" \"./**/*.mjs\" \"./**/*.ts\" \"./**/*.tsx\"",
 		"lint": "eslint ./packages",
-		"test": "echo \"Error: no test specified\" && exit 1",
+		"test": "echo \"No test specified\"",
 		"reinstall": "rm -rf ./node_modules && rm -rf ./packages/*/node_modules && npm install",
 		"build": "npm run build --workspaces --if-present"
 	},
