--- a/packages/dapp-utils/package.json
+++ b/packages/dapp-utils/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@tconnect.io/browser-utils",
+	"name": "@tconnect.io/dapp-utils",
 	"version": "0.0.1",
 	"main": "dist/cjs/index.js",
 	"module": "dist/esm/index.js",
