--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -30,7 +30,7 @@
 		// "moduleResolution": "node10",                     /* Specify how TypeScript looks up a file from a given module specifier. */
 		"baseUrl": "packages" /* Specify the base directory to resolve non-relative module names. */,
 		"paths": {
-			"@tconnect.io/browser-utils": ["browser-utils/src/index.ts"],
+			"@tconnect.io/dapp-utils": ["dapp-utils/src/index.ts"],
 			"@tconnect.io/core": ["core/src/index.ts"],
 			"@tconnect.io/dapp-communication": ["dapp-communication/src/index.ts"],
 			"@tconnect.io/evm-api-types": ["evm-api-types/src/index.ts"],
