refactor: Added repository links

--- a/packages/dapp-communication/package.json
+++ b/packages/dapp-communication/package.json
@@ -1,6 +1,16 @@
 {
 	"name": "@tconnect.io/dapp-communication",
 	"version": "0.0.1",
+	"description": "",
+	"author": "",
+	"license": "MIT",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/softstack/telegram-mini-app-sdk.git"
+	},
+	"keywords": [
+		"tezos"
+	],
 	"main": "dist/cjs/index.js",
 	"module": "dist/esm/index.js",
 	"types": "dist/types/index.d.ts",
@@ -22,9 +32,6 @@
 		"build": "npm run build:clean && npm run compile && rm ./dist/**/*.tsbuildinfo",
 		"prepublishOnly": "npm run build && npm test && npm run lint"
 	},
-	"author": "",
-	"license": "MIT",
-	"description": "",
 	"dependencies": {
 		"@tconnect.io/core": "^0.0.1",
 		"joi": "^17.13.3",
