--- a/packages/telegram-mini-app/package.json
+++ b/packages/telegram-mini-app/package.json
@@ -43,7 +43,7 @@
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-router-dom": "^6.26.2",
-		"react-scripts": "5.0.1",
+		"react-scripts": "^5.0.1",
 		"react-toastify": "^10.0.6",
 		"stream-browserify": "^3.0.0",
 		"tailwind-merge": "^2.5.4",
