--- a/packages/evm-provider/package.json
+++ b/packages/evm-provider/package.json
@@ -6,7 +6,7 @@
 	"license": "MIT",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/softstack/telegram-mini-app-sdk.git"
+		"url": "git+https://github.com/softstack/telegram-mini-app-sdk.git"
 	},
 	"keywords": [
 		"tezos"
