--- a/packages/modal/package.json
+++ b/packages/modal/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@tconnect.io/modal",
-	"version": "0.0.2",
+	"version": "0.0.3",
 	"description": "",
 	"author": "",
 	"license": "MIT",
@@ -15,9 +15,12 @@
 	"module": "dist/esm/index.js",
 	"types": "dist/types/index.d.ts",
 	"exports": {
-		"require": "./dist/cjs/index.js",
-		"import": "./dist/esm/index.js",
-		"types": "./dist/types/index.d.ts"
+		".": {
+			"require": "./dist/cjs/index.js",
+			"import": "./dist/esm/index.js",
+			"types": "./dist/types/index.d.ts",
+			"default": "./dist/esm/index.js"
+		}
 	},
 	"files": [
 		"dist/**/*",
@@ -35,10 +38,10 @@
 		"prepublishOnly": "npm run build && npm test && npm run lint"
 	},
 	"dependencies": {
-		"@tconnect.io/dapp-utils": "^0.0.1",
-		"@tconnect.io/evm-provider": "^0.0.1",
-		"@tconnect.io/tezos-beacon-provider": "^0.0.2",
-		"@tconnect.io/tezos-wc-provider": "^0.0.1",
+		"@tconnect.io/dapp-utils": "^0.0.2",
+		"@tconnect.io/evm-provider": "^0.0.2",
+		"@tconnect.io/tezos-beacon-provider": "^0.0.3",
+		"@tconnect.io/tezos-wc-provider": "^0.0.2",
 		"@twa-dev/sdk": "^7.10.1",
 		"clsx": "^2.1.1",
 		"react-inlinesvg": "^4.1.3",
