--- a/packages/tezos-beacon-provider/package.json
+++ b/packages/tezos-beacon-provider/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@tconnect.io/tezos-beacon-provider",
-	"version": "0.0.2",
+	"version": "0.0.3",
 	"description": "",
 	"author": "",
 	"license": "MIT",
@@ -15,9 +15,12 @@
 	"module": "dist/esm/index.js",
 	"types": "dist/types/index.d.ts",
 	"exports": {
-		"require": "./dist/cjs/index.js",
-		"import": "./dist/esm/index.js",
-		"types": "./dist/types/index.d.ts"
+		".": {
+			"require": "./dist/cjs/index.js",
+			"import": "./dist/esm/index.js",
+			"types": "./dist/types/index.d.ts",
+			"default": "./dist/esm/index.js"
+		}
 	},
 	"files": [
 		"dist/**/*",
@@ -39,8 +42,8 @@
 		"@stablelib/utf8": "^2.0.0",
 		"@stablelib/x25519-session": "^2.0.0",
 		"@taquito/taquito": "^20.0.1",
-		"@tconnect.io/core": "^0.0.1",
-		"@tconnect.io/tezos-beacon-api-types": "^0.0.1",
+		"@tconnect.io/core": "^0.0.2",
+		"@tconnect.io/tezos-beacon-api-types": "^0.0.2",
 		"@twa-dev/sdk": "^7.10.1",
 		"bs58check": "^2.1.2"
 	}
