--- a/packages/tezos-wc-provider/package.json
+++ b/packages/tezos-wc-provider/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@tconnect.io/tezos-wc-provider",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"description": "",
 	"author": "",
 	"license": "MIT",
@@ -15,9 +15,12 @@
 	"module": "dist/esm/index.js",
 	"types": "dist/types/index.d.ts",
 	"exports": {
-		"require": "./dist/cjs/index.js",
-		"import": "./dist/esm/index.js",
-		"types": "./dist/types/index.d.ts"
+		".": {
+			"require": "./dist/cjs/index.js",
+			"import": "./dist/esm/index.js",
+			"types": "./dist/types/index.d.ts",
+			"default": "./dist/esm/index.js"
+		}
 	},
 	"files": [
 		"dist/**/*",
@@ -33,10 +36,10 @@
 		"prepublishOnly": "npm run build && npm test && npm run lint"
 	},
 	"dependencies": {
-		"@tconnect.io/dapp-utils": "^0.0.1",
-		"@tconnect.io/core": "^0.0.1",
-		"@tconnect.io/dapp-communication": "^0.0.1",
-		"@tconnect.io/tezos-wc-api-types": "^0.0.1",
+		"@tconnect.io/dapp-utils": "^0.0.2",
+		"@tconnect.io/core": "^0.0.2",
+		"@tconnect.io/dapp-communication": "^0.0.2",
+		"@tconnect.io/tezos-wc-api-types": "^0.0.2",
 		"@twa-dev/sdk": "^7.10.1",
 		"joi": "^17.13.3"
 	}
