feat: Added version check to show-outdated feat: Added publish check to show-outdated

--- a/packages/show-outdated-dependencies/package.json
+++ b/packages/show-outdated-dependencies/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "show-outdated-dependencies",
 	"version": "0.0.1",
+	"private": true,
 	"description": "",
 	"author": "",
 	"license": "MIT",
