--- a/packages/evm-provider/package.json
+++ b/packages/evm-provider/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@tconnect.io/evm-provider",
-	"version": "0.0.3",
+	"version": "0.0.4",
 	"description": "",
 	"author": "",
 	"license": "MIT",
@@ -38,7 +38,8 @@
 	"dependencies": {
 		"@tconnect.io/core": "^0.0.3",
 		"@tconnect.io/dapp-communication": "^0.0.3",
-		"@tconnect.io/evm-api-types": "^0.0.3",
+		"@tconnect.io/dapp-utils": "^0.0.3",
+		"@tconnect.io/evm-api-types": "^0.0.4",
 		"@twa-dev/sdk": "^7.10.1",
 		"joi": "^17.13.3"
 	}
