--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"eslint-plugin-unicorn": "^55.0.0",
 		"globals": "^15.9.0",
 		"prettier": "^3.3.3",
+		"prettier-plugin-organize-imports": "^4.1.0",
 		"prettier-plugin-tailwindcss": "^0.6.8",
 		"typescript": "^5.6.3",
 		"typescript-eslint": "^8.6.0"
