--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
 		"test": "echo \"No test specified\"",
 		"reinstall": "rm -rf ./node_modules && rm -rf ./packages/*/node_modules && npm install",
 		"build": "npm run build --workspaces --if-present",
+		"start:telegram-mini-app": "npx serve -s packages/telegram-mini-app/build -l 3000",
+
 		"show-outdated": "PACKAGES_PATH='./packages' tsx ./packages/show-outdated-dependencies/src/index.ts"
 	},
 	"devDependencies": {
