--- a/packages/show-outdated-dependencies/package.json
+++ b/packages/show-outdated-dependencies/package.json
@@ -7,6 +7,7 @@
 	"license": "MIT",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
+		"build": "tsc --noEmit",
 		"start": "PACKAGES_PATH='../../packages' tsx ./src/index.ts"
 	},
 	"devDependencies": {
