--- a/packages/evm-api-types/package.json
+++ b/packages/evm-api-types/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "@tconnect.io/evm-api-types",
-	"version": "0.0.8",
+	"version": "0.0.9",
 	"description": "",
-	"author": "",
+	"author": "Softstack GmbH <hello@softstack.io> (https://softstack.io)",
 	"license": "MIT",
 	"repository": {
 		"type": "git",
