bug: Fixed failed evm requests did not throw an error refactor: Added "Add Etherlink" button for testing feat: Added Etherlink details to modal feat: Replaced crypto.randomUUID() with crypto.getRandomValues()

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "telegram-mini-app-sdk",
 	"version": "0.0.1",
 	"description": "Based on the Grant Proposal \"Unlocking Tezos Integration for Telegram’s 800 Million Users\"",
-	"author": "",
+	"author": "Softstack GmbH <hello@softstack.io> (https://softstack.io)",
 	"license": "MIT",
 	"workspaces": [
 		"packages/*"
