--- a/packages/dapp-communication/package.json
+++ b/packages/dapp-communication/package.json
@@ -37,6 +37,7 @@
 	},
 	"dependencies": {
 		"@tconnect.io/core": "^0.0.6",
+		"@tconnect.io/dapp-utils": "^0.0.8",
 		"joi": "^17.13.3",
 		"socket.io-client": "^4.7.5"
 	}
