--- a/packages/modal/package.json
+++ b/packages/modal/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@tconnect.io/modal",
-	"version": "0.0.11",
+	"version": "0.0.12",
 	"description": "",
 	"author": "Softstack GmbH <hello@softstack.io> (https://softstack.io)",
 	"license": "MIT",
@@ -38,15 +38,16 @@
 		"prepublishOnly": "npm run build && npm test && npm run lint"
 	},
 	"dependencies": {
-		"@tconnect.io/dapp-utils": "^0.0.8",
-		"@tconnect.io/evm-provider": "^0.0.9",
-		"@tconnect.io/tezos-beacon-provider": "^0.0.11",
-		"@tconnect.io/tezos-wc-provider": "^0.0.9",
+		"@tconnect.io/dapp-utils": "^0.0.9",
+		"@tconnect.io/evm-provider": "^0.0.10",
+		"@tconnect.io/tezos-beacon-provider": "^0.0.12",
+		"@tconnect.io/tezos-wc-provider": "^0.0.10",
 		"@twa-dev/sdk": "^7.10.1",
 		"clsx": "^2.1.1",
 		"react-inlinesvg": "^4.1.3",
 		"react-jazzicon": "^1.0.4",
 		"react-spinners": "^0.14.1",
+		"react-toastify": "^10.0.6",
 		"tailwind-merge": "^2.5.4"
 	},
 	"peerDependencies": {
