--- a/packages/dapp-utils/package.json
+++ b/packages/dapp-utils/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@tconnect.io/dapp-utils",
-	"version": "0.0.9",
+	"version": "0.0.10",
 	"description": "",
 	"author": "Softstack GmbH <hello@softstack.io> (https://softstack.io)",
 	"license": "MIT",
@@ -40,6 +40,7 @@
 		"@tconnect.io/evm-api-types": "^0.0.9",
 		"@tconnect.io/tezos-beacon-api-types": "^0.0.7",
 		"@tconnect.io/tezos-wc-api-types": "^0.0.8",
+		"@twa-dev/sdk": "^8.0.1",
 		"ua-parser-js": "^2.0.0"
 	}
 }
